feat(prom): update prom auto config and reload
