# api/models/export.go
@@ -2,12 +2,16 @@ package models
 
 import (
 	"devops/pkg/resp"
+	"fmt"
 	"time"
+
+	"github.com/souliot/siot-orm/orm"
 )
 
 type Export struct {
 	*PageQuery `orm:"-" json:"-" bson:"-"`
 	Id         string   `bson:"_id" json:"id,omitempty"`                             // Id
+	Env        string   `bson:"Env" json:"env,omitempty"`                            // 环境名称
 	Type       string   `bson:"Type" binding:"required" json:"type,omitempty"`       // 节点类型
 	Address    string   `bson:"Address" binding:"required" json:"address,omitempty"` // 节点地址
 	CreateTime int64    `bson:"CreateTime" json:"createTime,omitempty"`              // 创建时间
@@ -15,8 +19,17 @@ type Export struct {
 }
 
 func (m *Export) Add() (errC *resp.Response, err error) {
+	cond := orm.NewCondition()
+	cond = cond.And("Type", m.Type).And("Address", m.Address)
+	exist := o.QueryTable(&Environment{}).SetCond(cond).Exist()
+	if exist {
+		err = fmt.Errorf("节点类型及地址重复!")
+		errC = resp.ErrDupRecord
+		errC.MoreInfo = "节点类型及地址重复!"
+		return
+	}
 	m.CreateTime = time.Now().Unix()
-	o.ReadOrCreate(m, "Type", "Address")
+	_, err = o.Insert(m)
 	if err != nil {
 		errC = resp.ErrDbInsert
 		errC.MoreInfo = err.Error()
@@ -25,6 +38,9 @@ func (m *Export) Add() (errC *resp.Response, err error) {
 }
 
 func (m *Export) All() (res []*Export, errC *resp.Response, err error) {
+	if m.PageQuery == nil {
+		m.PageQuery = DefaultPageQuery
+	}
 	res = make([]*Export, 0)
 	qs := o.QueryTable(&Export{})
 	if m.Type != "" {
@@ -64,6 +80,15 @@ func (m *Export) Delete() (errC *resp.Response, err error) {
 }
 
 func (m *Export) Update() (errC *resp.Response, err error) {
+	cond := orm.NewCondition()
+	cond = cond.And("_id__ne", m.Id).And("Type", m.Type).And("Address", m.Address)
+	exist := o.QueryTable(&Environment{}).SetCond(cond).Exist()
+	if exist {
+		err = fmt.Errorf("节点类型及地址重复!")
+		errC = resp.ErrDupRecord
+		errC.MoreInfo = "节点类型及地址重复!"
+		return
+	}
 	_, err = o.Update(m)
 	if err != nil {
 		errC = resp.ErrDbRead
@@ -73,20 +98,36 @@ func (m *Export) Update() (errC *resp.Response, err error) {
 	return
 }
 
-func (m *Export) Node() (ex *Export, errC *resp.Response, err error) {
+func (m *Export) Node() (res []*Export, errC *resp.Response, err error) {
 	exs := make([]*Export, 0)
-	err = o.QueryTable("Export").Filter("Type", m.Type).All(&exs)
+	qs := o.QueryTable(&Export{})
+	if m.Env != "" {
+		qs = qs.Filter("Env", m.Env)
+	}
+	err = qs.Filter("Type", m.Type).All(&exs)
 	if err != nil {
 		errC = resp.ErrDbRead
 		errC.MoreInfo = err.Error()
 		return
 	}
 	targets := make([]string, 0)
+	tgs_cache := make(map[string]struct{})
 	for _, v := range exs {
-		targets = append(targets, v.Address)
+		tgs_cache[v.Address] = struct{}{}
 	}
-	ex = &Export{
+	eps := DefaultService.GetExport(m.Env, m.Type)
+
+	for _, v := range eps {
+		tgs_cache[v] = struct{}{}
+	}
+
+	for v, _ := range tgs_cache {
+		targets = append(targets, v)
+	}
+
+	ex := &Export{
 		Targets: targets,
 	}
+	res = []*Export{ex}
 	return
 }
